# ai-learning-coach

./: .env.example  CONFIG.md  DEPLOYMENT.md  Dockerfile  INSTALL.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ai_learning_coach/: __init__.py  coach.py  config.py  logger.py  main.py
ai_learning_coach/curriculum/: __init__.py  engine.py
ai_learning_coach/curriculum/data/: friday.json  monday.json  saturday.json  sunday.json  thursday.json  tuesday.json  wednesday.json
ai_learning_coach/database/: __init__.py  db.py  models.py
ai_learning_coach/gemini/: __init__.py  client.py
ai_learning_coach/lesson/: __init__.py  engine.py  prompts.py
ai_learning_coach/lesson/templates/: lesson.md.j2  mini_project.md.j2  quiz.md.j2
ai_learning_coach/scheduler/: __init__.py  scheduler.py
ai_learning_coach/telegram/: __init__.py  client.py
ai_learning_coach/utils/: helpers.py
tests/: conftest.py  test_curriculum_engine.py  test_database.py  test_gemini_client.py  test_lesson_engine.py  test_scheduler.py  test_telegram_client.py
