[project]
name = "ai-learning-coach"
version = "1.0.0"
description = "Automated daily AI/IT lesson generator and Telegram publisher."
requires-python = ">=3.12"
dependencies = [
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "Jinja2==3.1.4",
    "APScheduler==3.10.4",
]

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-mock==3.14.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
